force-app/main/default/objects/X7S_Questionnaire_Completed__c/X7S_Questionnaire_Completed__c.object-meta.xml
<CustomObject>
    <description>Object to support Questionnaire Completed records as part of the Questionnaire accelerator from 7Summits.</description>
    <label>7S Questionnaire Completed</label>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Completed Questionnaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Questionnaires Completed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>