force-app/main/default/objects/X7S_Questionnaire_Completed__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact the responses are associated with</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Completed_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>