force-app/main/default/objects/X7S_Questionnaire_Completed__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <inlineHelpText>The questionnaire the responses are associated with</inlineHelpText>
    <label>Questionnaire</label>
    <referenceTo>X7S_Questionnaire__c</referenceTo>
    <relationshipName>Completed_Questionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>