force-app/main/default/objects/X7S_Questionnaire_Completed__c/fields/Responses__c.field-meta.xml
<CustomField>
    <fullName>Responses__c</fullName>
    <inlineHelpText>The saved responses from the questionnaire</inlineHelpText>
    <label>Responses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>