force-app/main/default/objects/X7S_Questionnaire_Completed__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User the responses are associated with</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Completed_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>